######################################################################################
## Project - minilockcpp 
######################################################################################
cmake_minimum_required(VERSION 3.16)
project(minilockcpp)


######################################################################################
## Set local CMake Modules Path
######################################################################################
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")


######################################################################################
## minilock build options
######################################################################################
option(BUILD_UNITTESTS "Build unit tests" ON)


######################################################################################
## Find 3rd party packages
######################################################################################
find_package(Blake2Src REQUIRED)
find_package(SodiumSrc REQUIRED)
find_package(RapidJsonSrc REQUIRED)


######################################################################################
## minilockcpp CMake variables
######################################################################################
set(MINILOCK_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/src/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")


######################################################################################
## add subdirectories
######################################################################################
add_subdirectory(src)


######################################################################################
## Testcases
######################################################################################
if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_UNITTESTS)
  add_subdirectory(test)
endif()